# quote_generator

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.md  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: workflow.yml
api/: main.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
interface/: cli.py
quote_gen/api/: main.py
quote_gen/interface/: __init__.py  cli.py
quote_gen/quotes/: quote.py  quote_engine.py
quote_gen/resources/quotes/: mcgregor_quotes.csv
quote_gen/tests/: __init__.py  test_api.py  test_interface.py  test_quote_generator.py
quotes/: quote.py  quote_engine.py
resources/quotes/: musk_quotes.csv
tests/: test_api_project.py  test_quote_generator.py
