
[tool.poetry]
name = "quote-generator"
version = "0.1.0"
description = ""
authors = ["Bryan Lusse"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
anyio = "^4.0.0"
astroid = "2.12.13"
attrs = "22.2.0"
click = "8.1.3"
coverage = "7.0.4"
dill = "0.3.6"
fastapi = "0.88.0"
flake8 = "6.0.0"
h11 = "0.14.0"
idna = "3.4"
iniconfig = "1.1.1"
isort = "5.11.4"
mccabe = "0.7.0"
numpy = "1.24.1"
packaging = "22.0"
pandas = "1.5.2"
platformdirs = "2.6.2"
pluggy = "1.0.0"
pycodestyle = "2.10.0"
pydantic = "1.10.4"
pyflakes = "3.0.1"
pylint = "2.15.9"
pytest = "7.2.0"
pytest-cov = "4.0.0"
python-dateutil = "2.8.2"
pytz = "2022.7"
six = "1.16.0"
sniffio = "1.3.0"
starlette = "0.22.0"
tomlkit = "0.11.6"
typing_extensions = "4.4.0"
uvicorn = "0.20.0"
wrapt = "1.14.1"

[tool.poetry.dev-dependencies]
pre-commit = "3.5.0"
bump2version = "1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
